fix dept