@@ -27,7 +27,6 @@ package cls;
 import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * GetAllMethodsSnippet.
@@ -46,7 +45,7 @@ public class GetAllMethodsSnippet {
    */
   public static List<String> getAllMethods(final Class<?> cls) {
     return Arrays.stream(cls.getDeclaredMethods())
-        .map(Method::getName)
-        .collect(Collectors.toList());
+        .map(Method::getName).toList();
+
   }
 }
